src/main/design/css/basic-styles.scss
@import "config/base-import";
@import "normalize";

html {
  height: 100%;
  background-color: #f9f9f9;
  font-family: $ui-font, sans-serif;
  font-weight: 400;
  color: $color-almost-black;
}

html, body {
  height: 100%;
}

h1 {
  text-align: center;
}

header {
  display: flex;
  align-items: center;
  padding-left: 15px;
  position: relative;
  box-shadow: 0 2px 3px 0 rgb(232, 232, 232);

  .header-left {
    flex: 1 0 auto;
  }

  .header-right {
    flex: 1 0 auto;
    display: flex;
    align-items: center;
    justify-content: flex-end;
  }

  .logo a {
    display: inline-block;
    font-family: $logo-font;
    font-size: 60px;
    color: #0f1f90;
    text-decoration: none;

    @media (max-width: 767px) {
      text-indent: -279px;
      overflow: hidden;
      width: 100px;

      &:after {
        content: 'BW';
      }
    }
  }
}

.form-title {
  margin-bottom: 10px;
}

.form + .form {
  margin-top: 15px;
}

form {
  .field {
    margin-bottom: 10px;
  }

  .text-area-field {
    width: 100%;
    max-width: 350px;
  }

  input[type="submit"] {
    background-color: #0f4390;
    display: block;
    width: 100%;
    color: #fff;
    text-shadow: $basic-text-shadow;
    border-radius: 2px;
    overflow: hidden;

    &:hover {
      background-color: #1552ab;
    }
  }

  input[type="reset"] {
    width: 100%;
  }

  label {
    display: block;
    margin-bottom: 4px;
  }

  textarea {
    min-width: calc(100% - 4px);
    max-width: 350px;
    min-height: 100px;
  }
}

.flex-form {
  margin-top: 20px;
  text-align: center;

  .actions-container {
    margin-top: 25px;

    .btn {
      width: 100%;
      margin: 0 auto;

      & + .btn {
        margin-top: 15px;
      }
    }
  }
}

.text-btn {
  cursor: pointer;
  padding: 10px 15px;
}

.btn {
  cursor: pointer;
  padding: 10px 15px;
  max-width: 210px;
  border: none;
  box-shadow: $basic-box-shadow;
}

.span-btn {
  cursor: pointer;
}

.delete-btn {
  background-color: #f95545;
  color: #fff;

  &:hover {
    background-color: #f96154;
  }

  &:after {
    content: "\f1f8";
    @include fa-icon();
    margin-left: 7px;
  }
}

.update-btn {
  background-color: #2360b9;
  color: #fff;

  &:hover {
    background-color: #346ab9;
  }

  &:after {
    content: "\f044";
    @include fa-icon();
    margin-left: 7px;
  }
}

.reset-btn {
  background-color: #d6d6d6;

  &:hover {
    background-color: #e2e2e2;
  }
}

@keyframes rotate {
  0% {
    transform: rotate(0);
  }

  100% {
    transform: rotate(360deg);
  }
}

.refresh-btn {
  background-color: #34b738;
  color: #fff;

  &:hover {
    background-color: #48c54d;
  }

  &:after {
    content: "\f021";
    @include fa-icon();
    margin-left: 7px;
  }

  &:hover:after {
    animation: rotate;
  }

  &:hover:after {
    animation-duration: 1000ms;
    animation-iteration-count: infinite;
    animation-timing-function: linear;
  }
}

.finish-btn {
  background-color: #34b738;
  color: #fff;

  &:hover {
    background-color: #48c54d;
  }

  &:after {
    content: "\f00c";
    @include fa-icon();
    margin-left: 7px;
  }
}

.expand-btn {
  &:after {
    content: "\f0fe";
    @include fa-icon();
    margin-left: 1px;
  }
}

.collapse-btn {
  &:after {
    content: "\f146";
    @include fa-icon();
    margin-left: 1px;
  }
}

button[disabled] {
  cursor: not-allowed;
  color: rgba(224, 224, 224, 0.55);
}

.account-box {
  margin-left: auto;

  .user-info {
    display: flex;
    align-items: center;
    justify-content: flex-end;

    .username-link {
      text-decoration: none;
      color: $color-almost-black;
    }

    .username {
      &:before {
        content: "\f007";
        @include fa-icon();
        margin-right: 10px;
      }
    }
  }

  .logout-btn {
    margin-left: 10px;
  }
}

.logout-btn {
  box-shadow: none;

  &:after {
    content: "\f08b";
    @include fa-icon();
    margin-left: 12px;
  }
}

.mobile-menu {
  margin: 0 15px;

  .mobile-nav {
    margin: 0;
    padding: 0;
    list-style: none;
    position: absolute;
    top: 100%;
    left: 0;
    right: 0;
    max-height: 0;
    overflow: hidden;
    transition: max-height 250ms;
    background-color: #f9f9f9;

    .mi a,
    .user-info .username,
    .user-info .logout-btn {
      display: block;
      padding: 12px 15px;
      text-decoration: none;
      color: #0f1f90;
      font-weight: 600;
      box-shadow: none;
      max-width: none;
      border-top: 1px solid black;
    }
  }

  &.active {
    .mobile-nav-ctrl {
      position: relative;
      height: 27px;

      .nav-bar {
        margin: 0;
        position: absolute;
        top: calc(50% - 2.5px);
        left: 0;

        &:first-child,
        &:nth-child(3) {
          transform: rotateZ(45deg);
        }

        &:nth-child(2) {
          transform: rotateZ(-45deg);
        }
      }
    }

    .mobile-nav {
      max-height: 172px;
      box-shadow: 0 2px 3px 0 rgb(232, 232, 232);
    }
  }
}

.mobile-nav-ctrl {
  width: 35px;

  .nav-bar {
    height: 5px;
    min-width: 100%;
    background-color: #0f1f90;
    border-radius: 2px;
    transition: transform 250ms;

    & + .nav-bar {
      margin-top: 6px;
    }
  }
}

.standard-menu {
  display: none;
}

.main-nav {
  margin-top: 15px;
  padding-right: 15px;

  ul {
    display: flex;
    margin: 0;
    padding: 0;
    list-style: none;
    justify-content: flex-end;
  }

  .mi {
    a {
      display: block;
      padding: 10px;
      color: #0f1f90;
      font-weight: 600;
      text-decoration: none;
      position: relative;

      &:after {
        content: '';
        display: block;
        width: 0;
        height: 2px;
        background-color: #0f1f90;
        transition: width 250ms;
        position: absolute;
        left: 0;
        bottom: 0;
      }
    }

    a:hover:after,
    &.active a:after {
      width: 100%;
    }
  }

  .mi + .mi {
    margin-left: 10px;
  }
}

.hidden {
  display: none!important;
}

$footer-height: 50px;

.main-content {
  padding: 15px 20px;
  background-color: #fff;
  min-height: calc(100% - 91px - 30px - 50px);
}

footer {
  height: $footer-height;
  display: flex;
  align-items: center;
  padding-left: 15px;
  box-shadow: 0 -2px 3px 0 rgb(232, 232, 232);
}

@media (min-width: $bp-tablet) {
  .standard-menu {
    display: block;
  }

  .mobile-menu {
    display: none;
  }

  .flex-form {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
    text-align: left;

    .fields-wrap {
      display: flex;
      align-items: center;
      flex: 1 0 auto;
      width: 100%;

      .field + .field {
        margin-left: 25px;
      }
    }

    input[type="submit"] {
      max-height: 38px;
    }

    .actions-container {
      margin-top: 15px;

      .btn {
        margin: 0;

        & + .btn {
          margin-top: 0;
          margin-left: 15px;
        }
      }
    }
  }
}

